Make it compile with Java 5.
git-svn-id: https://subsonic.svn.sourceforge.net/svnroot/subsonic/trunk@469 24148959-8e0e-0410-9c20-a6ce11f09cd5